Release history for Text::FormBuilder.

0.06
    * marked Parse::RecDescent as an explicit dependency
    * added a single-quoted string to the grammar that
      can be used in the labels and default values to include
      characters in [^\w\t ]
    * generated code leaves out overwrriten options
    * allow option lists to have simple multiword and quoted
      string values
    * allow for validated but not required fields
    * added a !section directive that splits up a form into
      sub-tables with their own ids and captions
    
0.05 -  9 Nov 2004
    * First CPAN release